--- a/index.html
+++ b/index.html
@@ -5,32 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>Tropicália</title>
+    <title>festa-junina</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header class=" p-5">
 
-        <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="img/Design sem nome.jpg" class="nav-img " loading="lazy">
+        <nav class="container d-flex justify-content-between align-items-center">
+            <img src="img/logo1.jpg" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
             </ul>
-            <div id="acessibilidade" class="menu-acessibilidade"> 
-                <button id="botao-acessibilidade" class="btn btn-primary fw-bold rotacao-botao" aria-expanded="false">acessibilidade</button>
+
+
+            <div id="acessibilidade" class="menu-acessibilidade">
+                <button id="botao-acessibilidade" class="btn btn-primary fw-bold rotacao-botao"
+                    aria-expanded="false">acessibilidade</button>
                 <div id="opcoes-acessibilidade" class="opcoes-acessibilidade apresenta-lista">
-                    <button id="aumentar-fonte" class="btn btn-primary fw-bold" aria-label="Aumentar o tamanho da fonte">A+</button>
-                    <button id="diminuir-fonte" class="btn btn-primary fw-bold" aria-label="diminuir o tamanho da fonte">A-</button>
-                    <button id="alterna-contraste" class="btn btn-primary fw-bold" aria-label="Alterna o contraste de cores"> <i class="bi bi-shadows"></i></button>         
+                    <button id="aumentar-fonte" class="btn btn-primary fw-bold"
+                        aria-label="Aumentar o tamanho da fonte">A+</button>
+                    <button id="diminuir-fonte" class="btn btn-primary fw-bold"
+                        aria-label="diminuir o tamanho da fonte">A-</button>
+                    <button id="alterna-contraste" class="btn btn-primary fw-bold"
+                        aria-label="Alterna o contraste de cores"> <i class="bi bi-shadows"></i></button>
                 </div>
             </div>
         </nav>
-       
+
     </header>
 
 
@@ -39,33 +46,33 @@
         <section id="inicio" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
-                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/logo-2.png" class="mb-3" width="563"
-                        height="278" loading="lazy">
-                    <a href="#tropicalia"
-                        class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
-                        conhecer!</a>
+                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindos ao</h1>
+                    <a href="#festa-junina" class="btn btn-primary btn-lg botao-inicio fw-semibold">Bora lá!!</a>
                 </div>
-                <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png" alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em um microfone" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img src="" class="img-fluid img-inicio">
 
-              </div>
+
+            </div>
         </section>
 
-        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
+        <section id="festa-junina" class="my-5 pt-6 secao-festajunina" tabindex="0"
+            aria-label="Seção explicativa sobre a festa-junina">
             <div class="container d-flex align-items-center ">
-                <div class="col-4 d-flex justify-content-center ">
-                    <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
-                </div>
+
                 <div class="col-5">
                     <h2>O que é a festa junina?</h2>
                     <p class="p-2">A Festa Junina é uma celebração brasileira realizada durante o mês de junho,
                         com forte influência religiosa e a cultura, homenageando Santo Antônio, São João.
                         -Comidas típicas; pratos a base de milho, amendoim, mandioca, arroz etc.
-                        -principais danças; quadrilha, forró(baião,xote,xaxado), arrasta pé. E outras danças 
+                        -principais danças; quadrilha, forró(baião,xote,xaxado), arrasta pé. E outras danças
                         importantes incluem o bamba boi e a dança do coco, especialmente no nordeste brasileiro.
-
                     </p>
                 </div>
+                <div class="col-4 d-flex justify-content-center ">
+                    <img src="img/J.jpg" class="img-fluid rounded-5 w-100" loading="lazy">
+                </div>
+
+
             </div>
         </section>
 
@@ -75,24 +82,21 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Jorge_Ben_e_o_Trio_Mocotó_no_Teatro_da_Lagoa,_1971.tif.jpg"
-                            class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/decoraçao festa junina.jpg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5"
-                            loading="lazy">
+                        <img src="img/pessoas festa junina.jpg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Gilberto_Gil_nos_anos_1960.tif.jpg" class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/comidas festa junina.jpg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
-                            class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/capa- festa unina.jpg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
-             </div>
+            </div>
         </section>
 
         <section id="contato">
@@ -133,7 +137,7 @@
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.js"></script>
     <script src="script.js"></script>
-  
+
 </body>
 
 </html>
